--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Starter</title>
+    <title>DSCVR Resources</title>
     <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 <body>
