adjusted link color to primary for better contrast, updated readme

--- a/readme.html
+++ b/readme.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 <body>
-	<h1 id="dscvr"><strong>DSCVR</strong></h1>
-	<h1 id="resources">Resources</h1>
-	<p>A list of links and Resources for learning more web design stuff
-	<a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
+	<h1 id="-dscvr"> <em><strong>DSCVR</strong></em></h1>
+	<h2 id="theme-demo">Theme demo</h2>
+	<p><a href="/demo.html">view demo</a></p>
+	<h2 id="resources">Resources</h2>
+	<p>Here is A list of links and Resources for learning more web design stuff. full list repo: <a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
 	<h3 id="ui-ux">UI/UX</h3>
 	<ul>
 	<li><p><strong><a href="https://learnui.design/blog/">LearnUI.design</a></strong></p>
@@ -47,6 +48,6 @@
 	<li><strong><a href="http://kenwheeler.github.io/slick/">Slick Carousel</a></strong></li>
 	<li><strong><a href="https://babeljs.io/docs/en/">Babel</a></strong></li>
 	</ul>
-    <script src="./assets/js/app.js"></script>
+<script src="./assets/js/app.js"></script>
 </body>
 </html>
