--- a/readme.html
+++ b/readme.html
@@ -9,7 +9,7 @@
 <body>
 	<h1 id="-dscvr"> <em><strong>DSCVR</strong></em></h1>
 	<h2 id="theme-demo">Theme demo</h2>
-	<p><a href="/demo.html">view demo</a></p>
+	<p><a href="demo.html">view demo</a></p>
 	<h2 id="resources">Resources</h2>
 	<p>Here is A list of links and Resources for learning more web design stuff. full list repo: <a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
 	<h3 id="ui-ux">UI/UX</h3>
