--- a/readme.html
+++ b/readme.html
@@ -10,6 +10,32 @@
 	<h1 id="-dscvr"> <em><strong>DSCVR</strong></em></h1>
 	<h2 id="theme-demo">Theme demo</h2>
 	<p><a href="demo.html">view demo</a></p>
+	<p><strong>Note:</strong> <em>if either this page or the demo page look un-styled. that means you have not run your build yet or there is an issue preventing the build</em></p>
+	<h2 id="getting-started">Getting Started</h2>
+	<h3 id="1-setting-up-accounts">1. Setting up Accounts</h3>
+	<ol>
+	<li>Create <a href="https://github.com/">github accounts</a></li>
+	<li>send me your usernames so I can add you to the collaborators list  </li>
+	</ol>
+	<h3 id="2-github-app">2. Github App</h3>
+	<ol>
+	<li>Download &amp; Install <a href="https://desktop.github.com/">Github Desktop App</a></li>
+	<li>set up default cli and editor <code style="font-family: &quot;fira mono medium&quot;;">File&gt;Options&gt;Advanced</code></li>
+	</ol>
+	<h3 id="3-dependencies">3. Dependencies</h3>
+	<ol>
+	<li>check if git is installed <code style="font-family: &quot;fira mono medium&quot;;">git --version</code> if not install <a href="https://git-scm.com/downloads">git</a></li>
+	<li>check if node is installed <code style="font-family: &quot;fira mono medium&quot;;">node --version</code> or <code style="font-family: &quot;fira mono medium&quot;;">npm --version</code> Install <a href="https://nodejs.org/en/">node.js</a></li>
+	</ol>
+	<h3 id="4-initial-build-process">4. Initial Build Process</h3>
+	<ol>
+	<li>Clone Repository</li>
+	<li>Open CLI at <code style="font-family: &quot;fira mono medium&quot;;">dscvr/src/</code> or using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + `</code> then <code style="font-family: &quot;fira mono medium&quot;;">cd src</code></li>
+	<li>enter <code style="font-family: &quot;fira mono medium&quot;;">npm install</code></li>
+	<li>enter<code style="font-family: &quot;fira mono medium&quot;;">npm run build --watch</code></li>
+	<li>Using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + shift + A</code> <code style="font-family: &quot;fira mono medium&quot;;">Repository&gt;Open in Editor Name</code></li>
+	</ol>
+	<p><em>once your editor of choice is open you are ready to work on the project.</em></p>
 	<h2 id="resources">Resources</h2>
 	<p>Here is A list of links and Resources for learning more web design stuff. full list repo: <a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
 	<h3 id="ui-ux">UI/UX</h3>
@@ -37,7 +63,7 @@
 	<li><p><strong><a href="https://github.com/nas5w/100-days-of-code-frontend">100 Days of Code</a></strong></p>
 	</li>
 	</ul>
-	<h2 id="getting-started-with-webpack">Getting Started with Webpack</h2>
+	<h2 id="notable-modules-in-this-webpack">Notable Modules in this WebPack</h2>
 	<ul>
 	<li><strong><a href="https://webpack.js.org/concepts/">WebPack</a></strong></li>
 	<li><strong><a href="https://sass-lang.com/">SASS</a></strong></li>
