fixed link to return to readme page

--- a/demo.html
+++ b/demo.html
@@ -99,7 +99,7 @@
     </div>
   </div>
 
-  <p><a href="./index.html"><i class="fas fa-chevron-left"></i> Return to index.html</a></p>
+  <p><a href="readme.html"><i class="fas fa-chevron-left"></i> Return to index.html</a></p>
 </div>
 
 <div class="reveal" id="exampleModal1" data-reveal>
