rolled over changes from the markdown readme to the html readme

--- a/readme.html
+++ b/readme.html
@@ -8,9 +8,6 @@
 </head>
 <body>
 	<h1 id="-dscvr"> <em><strong>DSCVR</strong></em></h1>
-	<h2 id="theme-demo">Theme demo</h2>
-	<p><a href="demo.html">view demo</a></p>
-	<p><strong>Note:</strong> <em>if either this page or the demo page look un-styled. that means you have not run your build yet or there is an issue preventing the build</em></p>
 	<h2 id="getting-started">Getting Started</h2>
 	<h3 id="1-setting-up-accounts">1. Setting up Accounts</h3>
 	<ol>
@@ -30,12 +27,17 @@
 	<h3 id="4-initial-build-process">4. Initial Build Process</h3>
 	<ol>
 	<li>Clone Repository</li>
-	<li>Open CLI at <code style="font-family: &quot;fira mono medium&quot;;">dscvr/src/</code> or using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + `</code> then <code style="font-family: &quot;fira mono medium&quot;;">cd src</code></li>
+	<li>Open CLI at <code style="font-family: &quot;fira mono medium&quot;;">dscvr/src/</code> or using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + `</code> then <code style="font-family: &quot;fira mono medium&quot;;">cd src</code><ol>
 	<li>enter <code style="font-family: &quot;fira mono medium&quot;;">npm install</code></li>
 	<li>enter<code style="font-family: &quot;fira mono medium&quot;;">npm run build --watch</code></li>
+	</ol>
+	</li>
 	<li>Using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + shift + A</code> <code style="font-family: &quot;fira mono medium&quot;;">Repository&gt;Open in Editor Name</code></li>
 	</ol>
 	<p><em>once your editor of choice is open you are ready to work on the project.</em></p>
+	<h2 id="theme-demo">Theme demo</h2>
+	<p>Once you've followed the Steps, Check to see verify if it worked go <strong><a href="demo.html">View the Demo</a></strong> The result should look very colorful and styled.</p>
+	<p><strong>Note:</strong> <em>if either this page or the demo page look un-styled. that means you have not run your build yet or there is an issue preventing the build</em></p>
 	<h2 id="resources">Resources</h2>
 	<p>Here is A list of links and Resources for learning more web design stuff. full list repo: <a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
 	<h3 id="ui-ux">UI/UX</h3>
@@ -74,6 +76,5 @@
 	<li><strong><a href="http://kenwheeler.github.io/slick/">Slick Carousel</a></strong></li>
 	<li><strong><a href="https://babeljs.io/docs/en/">Babel</a></strong></li>
 	</ul>
-<script src="./assets/js/app.js"></script>
 </body>
 </html>
