--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
 
 
-</main>>
+</main>
 
 <!-- SOCIAL MEDIA FEED BEGINS -->
 
@@ -55,7 +55,7 @@
 
     <form>
 
-        
+
     </form>
 </footer>
 
