added  instructions for the build process in the readme

--- a/readme.html
+++ b/readme.html
@@ -11,51 +11,59 @@
 	<h2 id="getting-started">Getting Started</h2>
 	<h3 id="1-setting-up-accounts">1. Setting up Accounts</h3>
 	<ol>
-		<li>Create <a href="https://github.com/">github accounts</a></li>
-		<li>send me your usernames so I can add you to the collaborators list  </li>
+	<li>Create <a href="https://github.com/">github accounts</a></li>
+	<li>send me your usernames so I can add you to the collaborators list  </li>
 	</ol>
 	<h3 id="2-github-app">2. Github App</h3>
 	<ol>
-		<li>Download &amp; Install <a href="https://desktop.github.com/">Github Desktop App</a></li>
-		<li>set up default cli and editor <code style="font-family: &quot;fira mono medium&quot;;">File&gt;Options&gt;Advanced</code></li>
+	<li>Download &amp; Install <a href="https://desktop.github.com/">Github Desktop App</a></li>
+	<li>set up default cli and editor <code style="font-family: &quot;fira mono medium&quot;;">File&gt;Options&gt;Advanced</code></li>
 	</ol>
 	<h3 id="3-dependencies">3. Dependencies</h3>
 	<ol>
-		<li>check if git is installed <code style="font-family: &quot;fira mono medium&quot;;">git --version</code> if not install <a href="https://git-scm.com/downloads">git</a></li>
-		<li>check if node is installed <code style="font-family: &quot;fira mono medium&quot;;">node --version</code> or <code style="font-family: &quot;fira mono medium&quot;;">npm --version</code> Install <a href="https://nodejs.org/en/">node.js</a></li>
+	<li>check if git is installed <code style="font-family: &quot;fira mono medium&quot;;">git --version</code> if not install <a href="https://git-scm.com/downloads">git</a></li>
+	<li>check if node is installed <code style="font-family: &quot;fira mono medium&quot;;">node --version</code> or <code style="font-family: &quot;fira mono medium&quot;;">npm --version</code> Install <a href="https://nodejs.org/en/">node.js</a></li>
 	</ol>
 	<h3 id="4-initial-build-process">4. Initial Build Process</h3>
 	<ol>
-		<li>Clone Repository</li>
-		<li>Open CLI at <code style="font-family: &quot;fira mono medium&quot;;">dscvr/src/</code> or using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + `</code> then <code style="font-family: &quot;fira mono medium&quot;;">cd src</code><ol>
-			<li>enter <code style="font-family: &quot;fira mono medium&quot;;">npm install</code></li>
-			<li>enter<code style="font-family: &quot;fira mono medium&quot;;">npm run build --watch</code></li>
-		</ol>
+	<li>Clone Repository</li>
+	<li>Open CLI at <code style="font-family: &quot;fira mono medium&quot;;">dscvr/src/</code> or using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + `</code> then <code style="font-family: &quot;fira mono medium&quot;;">cd src</code><ol>
+	<li>enter <code style="font-family: &quot;fira mono medium&quot;;">npm install</code></li>
+	<li>enter<code style="font-family: &quot;fira mono medium&quot;;">npm run build --watch</code></li>
+	</ol>
 	</li>
 	<li>Using Github <code style="font-family: &quot;fira mono medium&quot;;">cmd + shift + A</code> <code style="font-family: &quot;fira mono medium&quot;;">Repository&gt;Open in Editor Name</code></li>
-</ol>
-<p><em>once your editor of choice is open you are ready to work on the project.</em></p>
-<h3 id="5-verify-functionality">5. Verify Functionality</h3>
-<p>Once you've followed the Steps, verify if it worked by <strong><a href="demo.html">Viewing the Demo</a></strong> The result should look colorful and obviously styled.</p>
-<p><strong>Note:</strong> <em>if either this page or the demo page look un-styled. that means you have not run your build yet or there is an issue preventing the build</em></p>
-<h2 id="resources">Resources</h2>
-<p>Here is A list of links and Resources for learning more web design stuff. full list repo: <a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
-<h3 id="ui-ux">UI/UX</h3>
-<ul>
+	</ol>
+	<p><em>once your editor of choice is open you are ready to work on the project.</em></p>
+	<h3 id="5-verify-functionality">5. Verify Functionality</h3>
+	<p>Once you've followed the Steps, verify if it worked by <strong><a href="demo.html">Viewing the Demo</a></strong> The result should look colorful and obviously styled.</p>
+	<p><strong>Note:</strong> <em>if either this page or the demo page look un-styled. that means you have not run your build yet or there is an issue preventing the build</em></p>
+	<h3 id="6-working-on-the-project">6. Working on the project</h3>
+	<ol>
+	<li>Open github Desktop and open terminal</li>
+	<li>In terminal Enter <code style="font-family: &quot;fira mono medium&quot;;">cd src</code> to move to development folder</li>
+	<li>enter <code style="font-family: &quot;fira mono medium&quot;;">npm run build --watch</code></li>
+	<li>leave the terminal open while working</li>
+	<li><code style="font-family: &quot;fira mono medium&quot;;">--watch</code> will auto update your changes to you the assets folder locally</li>
+	</ol>
+	<h2 id="resources">Resources</h2>
+	<p>Here is A list of links and Resources for learning more web design stuff. full list repo: <a href="https://github.com/AndreBClark/WebStudentResources">Resource List Repository</a></p>
+	<h3 id="ui-ux">UI/UX</h3>
+	<ul>
 	<li><p><strong><a href="https://learnui.design/blog/">LearnUI.design</a></strong></p>
 	</li>
 	<li><p><strong><a href="https://learnui.design/blog/king-vs-pawn-game-ui-design.html">King VS Pawn game UI Design</a></strong></p>
 	</li>
 	<li><strong><a href="https://learnui.design/blog/7-rules-for-creating-gorgeous-ui-part-1.html">7 Rules For Creating Gorgeous UI</a></strong></li>
-</ul>
-<h2 id="css">CSS</h2>
-<ul>
+	</ul>
+	<h2 id="css">CSS</h2>
+	<ul>
 	<li><strong><a href="http://getbem.com/">BEM</a></strong> Block Element Modifier class naming system</li>
 	<li><strong><a href="https://www.youtube.com/watch?v=IKFq2cSbQ4Q">Organizing CSS</a></strong> Video (37:54)</li>
 	<li><strong><a href="https://www.youtube.com/channel/UC7TizprGknbDalbHplROtag">Layout Land</a></strong> Youtube Channel covering CSS Grid and Flexbox</li>
-</ul>
-<h2 id="html">HTML</h2>
-<ul>
+	</ul>
+	<h2 id="html">HTML</h2>
+	<ul>
 	<li><p><strong><a href="https://html.com/semantic-markup/">Semantic HTML</a></strong></p>
 	</li>
 	<li><p><strong><a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown Cheetsheet</a></strong> simplified rich text formating language that outputs to HTML</p>
@@ -64,9 +72,9 @@
 	</li>
 	<li><p><strong><a href="https://github.com/nas5w/100-days-of-code-frontend">100 Days of Code</a></strong></p>
 	</li>
-</ul>
-<h2 id="notable-modules-in-this-webpack">Notable Modules in this WebPack</h2>
-<ul>
+	</ul>
+	<h2 id="notable-modules-in-this-webpack">Notable Modules in this WebPack</h2>
+	<ul>
 	<li><strong><a href="https://webpack.js.org/concepts/">WebPack</a></strong></li>
 	<li><strong><a href="https://sass-lang.com/">SASS</a></strong></li>
 	<li><strong><a href="https://api.jquery.com/">jQuery</a></strong></li>
@@ -75,6 +83,6 @@
 	<li><strong><a href="https://fontawesome.com/icons?d=gallery">Font Awesome</a></strong></li>
 	<li><strong><a href="http://kenwheeler.github.io/slick/">Slick Carousel</a></strong></li>
 	<li><strong><a href="https://babeljs.io/docs/en/">Babel</a></strong></li>
-</ul>
+	</ul>
 </body>
 </html>
