Skeleton html for footer

--- a/footer.html
+++ b/footer.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-  
+    <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 <body>
-    
+    <footer>
+        <h3>Thank You for Joining Us!</h3>
+        <ul class="footer_menu">
+            <li class="footer_menu_item">
+                <a class="footer_menu_link" href="index.html">HOME</a>
+            </li>
+            <li class="footer_menu_item">
+                <a class="footer_menu_link" href="Portfolio.html">PORTFOLIO</a>
+            </li>
+            <li class="footer_menu_item">
+                <a class="footer_menu_link" href="gallery.html">GUESTBOOK</a>
+            </li>
+        </ul>
+
+        <h4>Copyright &copy; 2019 North Idaho College Graphic Design Students</h4>
+
+    </footer>
 </body>
 </html>
