--- a/footer.html
+++ b/footer.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <footer>
-        <h3>Thank You for Joining Us!</h3>
-        <ul class="footer_menu">
-            <li class="footer_menu_item">
+        <h3>Thanks for Attending!</h3>
+        <ul class="footer-nav">
+            <li class="footer-nav__item">
                 <a class="footer_menu_link" href="index.html">HOME</a>
             </li>
-            <li class="footer_menu_item">
+            <li class="footer-nav__item">
                 <a class="footer_menu_link" href="Portfolio.html">PORTFOLIO</a>
             </li>
-            <li class="footer_menu_item">
-                <a class="footer_menu_link" href="gallery.html">GUESTBOOK</a>
+            <li class="footer-nav__item">
+                <a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
             </li>
         </ul>
 
