dev-server setup, dev/prod build modes ready closes #6

--- a/char.html
+++ b/char.html
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	  <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
-	<img src="img/joe_800.png" alt="joe">
+	<img src="img/characters/joe_800.png" alt="joe">
 </body>
 </html>
