--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webpack Starter</title>
-  <link rel="stylesheet" href="./assets/css/app.css">
+  <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
 
