--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>North Idaho College Student Portfolio Show</title>
+	<link rel="stylesheet" href="./dist/css/app.css">
 </head>
 
-<!-- HTML BEGINS --> 
-
-<title>
-    DSCVR | Student Portfolio Show
-</title>
 <body>
+
+
+<h1>
+    DSCVR | Student Portfolio Show
+</h1>
 <!-- NAVIGATION BEGINS -->
 
 <nav>
@@ -53,13 +54,9 @@
 
 <footer>
 
-    <form>
-
-
-    </form>
 </footer>
 
 <!-- FOOTER ENDS -->
-    
+
 </body>
 </html>
