--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
     <footer>
@@ -25,5 +25,6 @@
         <h4>Copyright &copy; 2019 North Idaho College Graphic Design Students</h4>
 
     </footer>
+	<script type="text/javascript" src="./dist/js/app.js"></script>
 </body>
 </html>
