Added div tag with id 'top' and a tag with class 'button'

--- a/button.html
+++ b/button.html
@@ -25,7 +25,7 @@
 <!-- HERO BEGINS -->
 
 <main>
-
+<div id="top"></div>
 
 </main>
 
@@ -53,7 +53,7 @@
 <!-- FOOTER BEGINS -->
 
 <footer>
-
+<a href="#top" class="button">Go to top</a>
 </footer>
 
 <!-- FOOTER ENDS -->
