Created work space for button development.

--- a/button.html
+++ b/button.html
@@ -6,6 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>North Idaho College Student Portfolio Show | buttons </title>
 	<link rel="stylesheet" href="dist/css/app.css">
+  <style>
+
+    html {
+      width: 100%;
+      height: 100%;
+    }
+
+    main {
+      display: flex;
+      flex-wrap: wrap;
+
+
+
+    }
+    .button__container {
+      display: flex;
+      flex-direction: column;
+      background-color: #f697a2;
+      flex-grow: 1;
+      width: 200px;
+      height: 500px;
+      align-items: center;
+      justify-content: center;
+      margin: 20px;
+      border: black solid 2px;
+
+
+
+    }
+
+    .button__container1 {
+      background-color: #fff88b;
+    }
+    .button__container2 {
+      background-color: #98bbd3;
+    }
+    .button__container3 {
+      background-color: #d9ebd4;
+    }
+
+    .button__container4 {
+      background-color: #dacee6;
+    }
+
+
+  </style>
+
 </head>
 
 <body>
@@ -25,8 +72,24 @@
 <!-- HERO BEGINS -->
 
 <main>
-<div id="top"></div>
+<div id="top" class="button__container">
 
+
+
+</div>
+
+<div class="button__container button__container1">
+  <!-- BUTTON BASE -->
+  <a href="" class="button">Go</a>
+  <a href="" class="button">Go</a>
+  <a href="" class="button">Go</a>
+  <a href="" class="button">Go</a>
+
+</div>
+
+<div class="button__container button__container2"></div>
+<div class="button__container button__container3"></div>
+<div class="button__container button__container4"></div>
 </main>
 
 <!-- SOCIAL MEDIA FEED BEGINS -->
@@ -53,7 +116,7 @@
 <!-- FOOTER BEGINS -->
 
 <footer>
-<a href="#top" class="button">Go to top</a>
+
 </footer>
 
 <!-- FOOTER ENDS -->
