--- a/footer.html
+++ b/footer.html
@@ -10,6 +10,12 @@
 <body>
     <footer>
         <h3>Thanks for Attending!</h3>
+
+        <form>
+            <input type="email">
+            <button>Submit</button>
+
+        </form>
         <ul class="footer-nav">
             <li class="footer-nav__item">
                 <a class="footer_menu_link" href="index.html">HOME</a>
