changing colors of button

--- a/button.html
+++ b/button.html
@@ -23,7 +23,6 @@
     .button__container {
       display: flex;
       flex-direction: column;
-      background-color: #f697a2;
       flex-grow: 1;
       width: 200px;
       height: 500px;
@@ -35,18 +34,21 @@
 
 
     }
-
     .button__container1 {
+      background-color: #f697a2;
+    }
+
+    .button__container2 {
       background-color: #fff88b;
     }
-    .button__container2 {
+    .button__container3 {
       background-color: #98bbd3;
     }
-    .button__container3 {
+    .button__container4 {
       background-color: #d9ebd4;
     }
 
-    .button__container4 {
+    .button__container5 {
       background-color: #dacee6;
     }
 
@@ -73,7 +75,7 @@
 
 <main>
 
-<div id="top" class="button__container">
+<div id="top" class="button__container button__container1">
   <!-- BUTTON BASE -->
   <a href="" class="button">View Event</a>
   <a href="" class="button button--secondary">View Event</a>
@@ -82,16 +84,16 @@
 
 </div>
 
-<div class="button__container button__container1">
+<div class="button__container button__container2">
   <a href="" class="button button--skew"><span class="button--inverseskew">View Portfolio</span></a>
   <a href="" class="button button--skew"><span class="button--inverseskew">View Portfolio</span></a>
   <a href="" class="button button--skew"><span class="button--inverseskew">View Portfolio</span></a>
 
 </div>
 
-<div class="button__container button__container2"></div>
 <div class="button__container button__container3"></div>
 <div class="button__container button__container4"></div>
+<div class="button__container button__container5"></div>
 </main>
 
 <!-- SOCIAL MEDIA FEED BEGINS -->
