added card classes
Co-Authored-By: Andre <andrebclark@users.noreply.github.com>

--- a/cards.html
+++ b/cards.html
@@ -8,13 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="card-module card-module--red">
-       <p class="card-module__description card-module__description--green-txt">
+    <section>
+    <div class="card-module card-module--yellow">
+
+        <h1>PORTFOLIO</h1>
+       <p class="card-module__description">
            portfolio show stuff this should be green fam
        </p>
 
     </div>
+    <div class="card-module card-module--pink">
 
+            <h1>GUESTBOOK</h1>
+           <p class="card-module__description">
+               portfolio show stuff this should be green fam
+           </p>
+    
+        </div>
+
+    </section>
     
 </body>
 </html>
