added icon classes for facebook and instagram
Co-Authored-By: Andre <andrebclark@users.noreply.github.com>

--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,8 @@
                 <a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
             </li>
         </ul>
-
+        <i class="fab fa-facebook-f"></i>
+        <i class="fas fa-hashtag"></i>
         <h4>Copyright &copy; 2019 North Idaho College Graphic Design Students</h4>
 
     </footer>
