--- a/button.html
+++ b/button.html
@@ -49,7 +49,7 @@
     }
 
     .button__container5 {
-      background-color: #dacee6;
+      background-color: #fff;
     }
 
 
@@ -77,23 +77,28 @@
 
 <div id="top" class="button__container button__container1">
   <!-- BUTTON BASE -->
-  <a href="" class="button">View Event</a>
-  <a href="" class="button button--secondary">View Event</a>
-  <a href="" class="button">View Event</a>
+  <a href="" class="button button__nocolor">View Event</a>
+  <a href="" class="button button__nocolor">View Event</a>
+  <a href="" class="button button__nocolor">View Event</a>
 
 
 </div>
 
 <div class="button__container button__container2">
-  <a href="" class="button button--skew"><span class="button--inverseskew">View Portfolio</span></a>
-  <a href="" class="button button--skew"><span class="button--inverseskew">View Portfolio</span></a>
-  <a href="" class="button button--skew"><span class="button--inverseskew">View Portfolio</span></a>
+  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><span class="button--inverseskew">View Portfolio</span></a>
+  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><span class="button--inverseskew">View Portfolio</span></a>
+  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><span class="button--inverseskew">View Portfolio</span></a>
 
 </div>
 
 <div class="button__container button__container3"></div>
 <div class="button__container button__container4"></div>
-<div class="button__container button__container5"></div>
+<div class="button__container button__container5">
+
+<a href="" class="button">View Event</a>
+<a href="" class="button button--ver2">View Event</a>
+
+</div>
 </main>
 
 <!-- SOCIAL MEDIA FEED BEGINS -->
