Added skeleton html for nav links.

--- a/mobilenav.html
+++ b/mobilenav.html
@@ -16,7 +16,9 @@
 <!-- NAVIGATION BEGINS -->
 
 <nav>
-
+<a href"" class="">Logo</a>
+<a href"" class="">Student Portfolios</a>
+<a href"" class="">Guestbook</a>
 </nav>
 
 </body>
