adding classes to nav links.

--- a/mobilenav.html
+++ b/mobilenav.html
@@ -15,7 +15,7 @@
 </h1>
 <!-- NAVIGATION BEGINS -->
 
-<nav>
+<nav class="nav__mobile">
 <a href"" class="">Logo</a>
 <a href"" class="">Student Portfolios</a>
 <a href"" class="">Guestbook</a>
