Added paths to images.

--- a/hero.html
+++ b/hero.html
@@ -18,5 +18,13 @@
 <nav>
 </nav>
 
+  <img src="/img/mobile-hero/web.png" alt="Illustration of the web team." />
+  <img src="/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
+  <img src="/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
+  <img src="/img/mobile-hero/print.png" alt="Illustration of the print team." />
+  <img src="/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
+
+
+
 </body>
 </html>
