--- a/button.html
+++ b/button.html
@@ -36,6 +36,7 @@
     }
     .button__container1 {
       background-color: #f697a2;
+
     }
 
     .button__container2 {
@@ -83,21 +84,42 @@
 
 
 </div>
-
+<!-- Yellow background -->
 <div class="button__container button__container2">
-  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><span class="button--inverseskew">View Portfolio</span></a>
-  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><span class="button--inverseskew">View Portfolio</span></a>
-  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><span class="button--inverseskew">View Portfolio</span></a>
+  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><div class="button--inverseskew">View Portfolio</div></a>
+  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><div class="button--inverseskew">View Portfolio</div></a>
+  <a href="" class="button button__nocolor button--skew button__nocolor--yellow">
+    <div class="button--inverseskew">View Portfolio</div></a>
+
+</div>
+<!-- Blue background -->
+<div class="button__container button__container3">
+
+<a href="" class="button button__nocolor button--skew button__nocolor--blue"><div class="button--inverseskew">View Portfolio</div></a>
+
+<a href="" class="button button__nocolor button__nocolor--blue">View Event</a>
 
 </div>
 
-<div class="button__container button__container3"></div>
-<div class="button__container button__container4"></div>
+<!-- Green background -->
+<div class="button__container button__container4">
+
+  <a href="" class="button button__nocolor button--skew button__nocolor--green"><div class="button--inverseskew">View
+  Event</div></a>
+
+  <a href="" class="button button__nocolor button__nocolor--green">View Event</a>
+
+  <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--green"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+
+</div>
+
+<!-- White background -->
 <div class="button__container button__container5">
 
 <a href="" class="button">View Event</a>
 <a href="" class="button button--ver2">View Event</a>
 
+<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
 </div>
 </main>
 
