--- a/hero.html
+++ b/hero.html
@@ -20,27 +20,36 @@ body {
 <body>
 
 
-<h1>
-    DSCVR | Student Portfolio Show
-</h1>
+
 <!-- NAVIGATION BEGINS -->
 
 <nav>
 </nav>
+
+<!-- MOBILE HERO IMAGE MODULE BEGINS -->
+<div class="hero-image__mobile">
 <!-- MOBILE HERO IMAGE SLIDER BEGINS -->
-<div class="hero-image__mobile-slider"
-  <img class="hero-image__mobile" src="src/img/mobile-hero/web.png" alt="Illustration of the web team." />
-  <img class="hero-image__mobile" src="src/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
-  <img class="hero-image__mobile" src="src/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
-  <img class="hero-image__mobile" src="src/img/mobile-hero/print.png" alt="Illustration of the print team." />
-  <img class="hero-image__mobile" src="src/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
+  <div>
+    <img class="hero-image__mobile--slider" src="src/img/mobile-hero/web.png" alt="Illustration of the web team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/print.png" alt="Illustration of the print team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
+
 </div>
+
 <!-- MOBILE HERO IMAGE SLIDER ENDS -->
 
 <!-- MOBILE CTA BEGINS -->
-
+<h1>
+    DSCVR | Student Portfolio Show <br />
+    <strong>May 3</strong>
+</h1>
+<a class="button button--skew button--hoverstraight"><div class="button--straight">View Event Details</div></a>
 
 <!-- MOBILE CTA ENDS -->
+</div>
+<!-- MOBILE HERO IMAGE MODULE ENDS -->
 
 <script>
 
@@ -51,7 +60,7 @@ body {
      imageSlider();
 
      function imageSlider() {
-       var images = document.getElementsByClassName("hero-image__mobile");
+       var images = document.getElementsByClassName("hero-image__mobile--slider");
        for (var i = 0; i < images.length; i++) {
          images[i].style.display = "none";
        }
