Added button styleing

--- a/hero.html
+++ b/hero.html
@@ -45,7 +45,7 @@ body {
     DSCVR | Student Portfolio Show <br />
     <strong>May 3</strong>
 </h1>
-<a class="button button--skew button--hoverstraight"><div class="button--straight">View Event Details</div></a>
+<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event Details</div></a>
 
 <!-- MOBILE CTA ENDS -->
 </div>
