striped navigation exploration using transform:skew and transform:rotate (looks very broken at the moment...).

--- a/mobilenav.html
+++ b/mobilenav.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>North Idaho College Student Portfolio Show</title>
 	<link rel="stylesheet" href="dist/css/app.css">
+
+<style>
+</style>
+
 </head>
 
 <body>
@@ -16,9 +20,12 @@
 <!-- NAVIGATION BEGINS -->
 
 <nav class="nav__mobile">
-<a href"" class="">Logo</a>
-<a href"" class="">Student Portfolios</a>
-<a href"" class="">Guestbook</a>
+ <div class="nav__mobile--logo"><img src="src/img/dscvr_retro.png" alt="DSCVR Logo" />
+ </div>
+ <a href"" class="nav__mobile--home">Home</a>
+ <a href"" class="nav__mobile--portfolio">Student Portfolios</a>
+<a href"" class="nav__mobile--guestbook">Guestbook</a>
+<span><i class="fas fa-bars fa-3x nav__mobile--hamburger"></i></span>
 </nav>
 
 </body>
