--- a/cards.html
+++ b/cards.html
@@ -28,9 +28,9 @@
         
         <div class="card-module card-module--blue">
 
-            <h1>HOME</h1>
+            <h1>Show</h1>
            <p class="card-module__description">
-               Home stuff this should be blue fam
+               Show info stuff this should be blue fam
            </p>
            <a><img src="#"></a>
         </div>
