added the icons

--- a/footer.html
+++ b/footer.html
@@ -24,6 +24,11 @@
 
         <h4>Copyright &copy; 2019 North Idaho College Graphic Design Students</h4>
 
+        <i class="fab fa-facebook-f"></i>
+        <i class="fas fa-hashtag"></i>
+        <i class="fab fa-twitter"></i>
+
+
     </footer>
 	<script type="text/javascript" src="./dist/js/app.js"></script>
 </body>
