--- a/footer.html
+++ b/footer.html
@@ -24,9 +24,10 @@
 
         <h4>Copyright &copy; 2019 North Idaho College Graphic Design Students</h4>
 
-        <i class="fab fa-facebook-f"></i>
-        <i class="fas fa-hashtag"></i>
-        <i class="fab fa-twitter"></i>
+    
+       <span class="fab fa-facebook-f"></span>
+       <span class="fas fa-hashtag"></span>
+        <span class="fab fa-twitter"></span>
 
 
     </footer>
