--- a/header.html
+++ b/header.html
@@ -12,19 +12,20 @@
 		<nav>
 		<ul class="nav-desktop__list">
 			<li class="nav-desktop__item">
-				<a class="h1" href="/index.html">D S C V R
+				<a class="h1 nav-link" href="/index.html">D S C V R
 				</a>
 			</li>
 			<li class="nav-desktop__item">
-				<a href="/portfolio.html">Portfolio
+				<a class="nav-link nav-link--primary" href="/portfolio.html">Portfolio
 				</a>
 			</li>
 			<li class="nav-desktop__item">
-				<a href="/guestbook.html">Guestbook
+				<a class="nav-link nav-link--secondary"
+				href="/guestbook.html">Guestbook
 				</a>
 			</li>
-			<li class="nav-desktop__item">
-				<a href="/contact.html">Contact
+			<li  class="nav-desktop__item">
+				<a class=" nav-link nav-link--tertiary" href="/contact.html">Contact
 				</a>
 			</li>
 		</ul>
