--- a/cards.html
+++ b/cards.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./dist/css/app.css">
-    <title>Document</title>
+    <title>card module demo</title>
 </head>
 <body>
     <section>
