removed module from card name, redundant? #14

--- a/cards.html
+++ b/cards.html
@@ -9,41 +9,41 @@
 </head>
 <body>
     <section>
-    <div class="card-module card-module--yellow">
+    <div class="card card--yellow">
 
 		<a><img src="#"></a>
         <h1>PORTFOLIO</h1>
-       <p class="card-module__description">
+       <p class="card__description">
            portfolio show stuff this should be yellow fam
        </p>
     </div>
-    <div class="card-module card-module--pink">
+    <div class="card card--pink">
 
 		<a><img src="#"></a>
             <h1>GUESTBOOK</h1>
-           <p class="card-module__description">
+           <p class="card__description">
                Guestbook stuff this should be pink fam
            </p>
         </div>
 
-        <div class="card-module card-module--blue">
+        <div class="card card--blue">
 
 			<a><img src="#"></a>
             <h1>Show</h1>
-           <p class="card-module__description">
+           <p class="card__description">
                Show info stuff this should be blue fam
            </p>
         </div>
     </section>
 
     <section>
-        <div class="card-module card-module--yellow">
+        <div class="card card--yellow">
 
             <h1>Suelynn Parker</h1>
-           <p class="card-module__description">
+           <p class="card__description">
            </p>
            <a><img src="/src/img/portfolio/web-illustrations170x170-suelyn.png"></a>
-           <p class="card-module__description">
+           <p class="card__description">
                 Suelynn info stuff should be here fam
             </p>
 
