Styled shown mobile nav

--- a/mobilenav.html
+++ b/mobilenav.html
@@ -9,6 +9,25 @@
 <style>
 </style>
 
+
+<javascript>
+
+function init() {
+
+function showDropdownlist {
+
+
+
+
+}
+showDropdownlist();
+
+}
+
+window.onload = init;
+
+</javascript>
+
 </head>
 
 <body>
@@ -20,12 +39,14 @@
 <!-- NAVIGATION BEGINS -->
 
 <nav class="nav__mobile">
- <div class="nav__mobile--logo"><img src="src/img/dscvr_retro.png" alt="DSCVR Logo" />
+ <div class="nav__mobile--logoandham"><span class="nav__mobile--logo"><img src="src/img/dscvr_retro.png" alt="DSCVR Logo" /></span>
+   <span><i class="fas fa-bars fa-2x nav__mobile--hamburger"></i></span>
  </div>
- <a href"" class="nav__mobile--home">Home</a>
- <a href"" class="nav__mobile--portfolio">Student Portfolios</a>
-<a href"" class="nav__mobile--guestbook">Guestbook</a>
-<span><i class="fas fa-bars fa-3x nav__mobile--hamburger"></i></span>
+ <ul>
+<li class="nav__mobile--dropdownlist"> <a href""> Home</a></li>
+ <li class="nav__mobile--dropdownlist"><a href"">Student Portfolios</a></li>
+<li class="nav__mobile--dropdownlist"><a href"">Guestbook</a></li>
+</ul>
 </nav>
 
 </body>
