add content-block classes
Co-Authored-By: null <DanielleRP@users.noreply.github.com>

--- a/cards.html
+++ b/cards.html
@@ -8,7 +8,7 @@
     <title>card module demo</title>
 </head>
 <body>
-    <section>
+    <section class="content-block content-block--wide">
     <div class="card card--yellow">
 
 		<a><img src="#"></a>
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="content-block">
         <div class="card card--yellow">
 
             <h1>Suelynn Parker</h1>
