--- a/button.html
+++ b/button.html
@@ -111,6 +111,8 @@
 
   <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--green"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
 
+  <a href="" class="button button__nocolor button__nocolor--green button--hoverskew"><div class="button--hoverinversetextskew">View Event</div></a>
+
 </div>
 
 <!-- White background -->
