added desktop hero to hero.html, and media query

--- a/hero.html
+++ b/hero.html
@@ -27,9 +27,9 @@ body {
 </nav>
 
 <!-- MOBILE HERO IMAGE MODULE BEGINS -->
-<div class="hero-image__mobile">
+<div class="hero-image__card">
 <!-- MOBILE HERO IMAGE SLIDER BEGINS -->
-  <div>
+  <div class="hero-image__mobile">
     <img class="hero-image__mobile--slider" src="src/img/mobile-hero/web.png" alt="Illustration of the web team." />
   <img class="hero-image__mobile--slider" src="src/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
   <img class="hero-image__mobile--slider" src="src/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
@@ -37,6 +37,10 @@ body {
   <img class="hero-image__mobile--slider" src="src/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
 
 </div>
+
+<!-- desktop hero image -->
+<img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
+
 
 <!-- MOBILE HERO IMAGE SLIDER ENDS -->
 
