--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 </head>
 
 <body>
-
+	<header class="nav-desktop">
+		<nav>
+		<ul class="nav-desktop__list">
+			<li class="nav-desktop__item">
+				<a class="h1 nav-link" href="/index.html">D S C V R
+				</a>
+			</li>
+			<li class="nav-desktop__item">
+				<a class="nav-link nav-link--primary" href="/portfolio.html">Portfolio
+				</a>
+			</li>
+			<li class="nav-desktop__item">
+				<a class="nav-link nav-link--secondary"
+				href="/guestbook.html">Guestbook
+				</a>
+			</li>
+			<li  class="nav-desktop__item">
+				<a class=" nav-link nav-link--tertiary" href="/contact.html">Contact
+				</a>
+			</li>
+		</ul>
+	</nav>
+	</header>
 
 <h1>
     DSCVR | Student Portfolio Show
