--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <footer>
-        <h3>Thanks for Attending!</h3>
+        <div class="section_thanks">
+          <h3>Thanks for Attending!</h3>
         <ul class="footer-nav">
             <li class="footer-nav__item">
                 <a class="footer_menu_link" href="index.html">HOME</a>
@@ -21,7 +22,9 @@
                 <a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
             </li>
         </ul>
+      </div>
 
+      <div class="section_socials">
         <h5>Follow Us</h5>
         <div class="social">
 
@@ -31,7 +34,11 @@
                 <a class="fab fa-twitter" href="https://twitter.com/nicgdes"></a>
             </ul>
              </div>
-             <h5>Subscribe to our Newsletter</h5>
+        </div>
+
+
+        <div class="section_subscribe">
+               <h5>Subscribe to our Newsletter</h5>
 
                     <!-- Begin Mailchimp Signup Form -->
 
@@ -45,6 +52,7 @@
                         <div class="clear">
                             <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button--hoverinverseskew button__nocolor button__nocolor--blue"></div>
                         </div>
+        </div>
                     </form>
 
                     <!--End mc_embed_signup-->
