--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
 <body>
     <footer>
         <div class="section_thanks">
-          <h3>Thanks for Attending!</h3>
+          <h4>Thanks for Attending!</h4>
         <ul class="footer-nav">
             <li class="footer-nav__item">
                 <a class="footer_menu_link" href="index.html">HOME</a>
@@ -25,20 +25,20 @@
       </div>
 
       <div class="section_socials">
-        <h5>Follow Us</h5>
+        <h4>Follow Us</h4>
         <div class="social">
 
             <ul>
-                <a class="fab fa-facebook-f" href="https://www.facebook.com/nicgdes/"></a>
-                <a class="fab fa-instagram" href="https://www.instagram.com/nicgdes/"></a>
-                <a class="fab fa-twitter" href="https://twitter.com/nicgdes"></a>
+                <a class="fab fa-2x fa-facebook-f" href="https://www.facebook.com/nicgdes/"></a>
+                <a class="fab fa-2x fa-instagram" href="https://www.instagram.com/nicgdes/"></a>
+                <a class="fab fa-2x fa-twitter" href="https://twitter.com/nicgdes"></a>
             </ul>
              </div>
         </div>
 
 
         <div class="section_subscribe">
-               <h5>Subscribe to our Newsletter</h5>
+               <h4>Subscribe to our Newsletter</h4>
 
                     <!-- Begin Mailchimp Signup Form -->
 
@@ -112,7 +112,7 @@
                         End mc_embed_signup-->
 
 
-        <div>
+        <div class="copyright">
             <p>Copyright &copy; 2019 North Idaho College Graphic Design Students</p>
         </div>
 
