--- a/mobilenav.html
+++ b/mobilenav.html
@@ -13,8 +13,8 @@
 <script>
 
 function init() {
-var menuDropdownList = document.getElementById('mobile-menu');
-menuDropdownList.style.display ='none';
+// var menuDropdownList = document.getElementById('mobile-menu');
+// menuDropdownList.style.display ='none';
 // var menuDropdownList = document.getElementById('mobile-menu');
 var hamburgerMenu = document.getElementsByTagName('i');
 hamburgerMenu.onclick = showMenu;
@@ -53,8 +53,8 @@ window.onload = init;
    <span><i class="fas fa-bars fa-2x nav__mobile--hamburger"></i></span>
  </div>
  <ul id="mobile-menu">
-<li class="nav__mobile--dropdownlist-item"> <a href""> Home</a></li>
- <li class="nav__mobile--dropdownlist-item"><a href"">Student Portfolios</a></li>
+<li class="nav__mobile--dropdownlist-item"> <a href"">Home<a></li>
+ <li class="nav__mobile--dropdownlist-item"><a href"">Portfolio </a></li>
 <li class="nav__mobile--dropdownlist-item"><a href"">Guestbook</a></li>
 </ul>
 </nav>
