--- a/cards.html
+++ b/cards.html
@@ -8,31 +8,40 @@
     <title>card module demo</title>
 </head>
 <body>
-    <section class="content-block content-block--wide">
+    <section class="content-block content-block--narrow">
     <div class="card card--yellow">
 
 		<a><img src="#"></a>
         <h1>PORTFOLIO</h1>
        <p class="card__description">
-           portfolio show stuff this should be yellow fam
+        Discover Us!  
        </p>
+       <div class="cards-button">
+        <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+     </div>
     </div>
     <div class="card card--pink">
 
 		<a><img src="#"></a>
-            <h1>GUESTBOOK</h1>
+            <h1>PHOTOBOOTH</h1>
            <p class="card__description">
-               Guestbook stuff this should be pink fam
+               Join The Fun!
            </p>
+           <div class="cards-button">
+            <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+         </div>
         </div>
 
         <div class="card card--blue">
 
 			<a><img src="#"></a>
-            <h1>Show</h1>
+            <h1>DSCVR</h1>
            <p class="card__description">
-               Show info stuff this should be blue fam
+            Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work. 
            </p>
+           <div class="cards-button">
+           <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--blue"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+        </div>
         </div>
     </section>
 
@@ -44,7 +53,7 @@
            </p>
            <a><img src="/src/img/portfolio/web-illustrations170x170-suelyn.png"></a>
            <p class="card__description">
-                Suelynn info stuff should be here fam
+            “The start is not nearly as important as the finish.” – the Last Holiday 
             </p>
 
            <div class="portfolio_pieces">
