--- a/cards.html
+++ b/cards.html
@@ -11,7 +11,7 @@
     <section class="content-block content-block--narrow">
     <div class="card card--yellow">
 
-		<a><img src="#"></a>
+		<a><img src="src/img/Web_Portfolio_1200px_RGB.jpg"></a>
         <h1>PORTFOLIO</h1>
        <p class="card__description">
         Discover Us!  
