added dscvr_retro.png to desktop header

--- a/header.html
+++ b/header.html
@@ -10,10 +10,11 @@
 <body>
 	<header class="nav-desktop">
 		<nav>
-		<ul class="nav-desktop__list">
+		<ul>
 			<li class="nav-desktop__item">
-				<a class="h1 nav-link" href="/index.html">D S C V R
-				</a>
+					<a class="h1 nav-link" href=""><span class="nav__mobile--logo"><img src="src/img/dscvr_retro.png" alt="DSCVR Logo" /></span></a>
+				<!-- <a class="h1 nav-link" href="/index.html">D S C V R
+				</a> -->
 			</li>
 			<li class="nav-desktop__item">
 				<a class="nav-link nav-link--primary" href="/portfolio.html">Portfolio
