added cta from hero
Co-Authored-By: katalist-innovations <katalist-innovations@users.noreply.github.com>
Co-Authored-By: daniellerp <daniellerp@users.noreply.github.com>

#20 replaced placeholder h1 for cta from hero-module

--- a/index.html
+++ b/index.html
@@ -33,18 +33,17 @@
 	</nav>
 	</header>
 
-<h1>
-    DSCVR | Student Portfolio Show
-</h1>
-<!-- NAVIGATION BEGINS -->
-
-<nav>
-
-</nav>
-
 <!-- NAVIGATION ENDS -->
 
 <!-- HERO BEGINS -->
+
+<!-- desktop hero image -->
+<h1>
+	DSCVR | Student Portfolio Show <br />
+	<strong>May 3</strong>
+</h1>
+<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event Details</div></a>
+<img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
 
 <main>
 
