--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
 
 <!-- NAVIGATION ENDS -->
 
+
 <!-- HERO BEGINS -->
+<div class="hero-image__card">
+<!-- MOBILE HERO IMAGE SLIDER BEGINS -->
+  <div class="hero-image__mobile">
+    <img class="hero-image__mobile--slider" src="src/img/mobile-hero/web.png" alt="Illustration of the web team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/print.png" alt="Illustration of the print team." />
+  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
+
+</div>
 
 <!-- desktop hero image -->
 <h1>
