--- a/index.html
+++ b/index.html
@@ -61,32 +61,63 @@
 
 </main>
 
-<!-- SOCIAL MEDIA FEED BEGINS -->
-
-<!-- SOCIAL MEDIA FEED ENDS -->
-
-<!-- CONTACT FORM BEGINS-->
-<form>
-
-
-</form>
-
-<!-- CONTACT FORM ENDS -->
-
-<!-- PHOTO GALLERY BEGINS -->
-
-<figcaption>
-
-
-</figcaption>
 
 <!-- PHOTO GALLERY ENDS -->
 
 <!-- FOOTER BEGINS -->
 
 <footer>
+	<div class="section_thanks">
+	  <h3>Thanks for Attending!</h3>
+	<ul class="footer-nav">
+		<li class="footer-nav__item">
+			<a class="footer_menu_link" href="index.html">HOME</a>
+		</li>
+		<li class="footer-nav__item">
+			<a class="footer_menu_link" href="Portfolio.html">PORTFOLIO</a>
+		</li>
+		<li class="footer-nav__item">
+			<a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
+		</li>
+	</ul>
+  </div>
 
-</footer>
+  <div class="section_socials">
+	<h5>Follow Us</h5>
+	<div class="social">
+
+		<ul>
+			<a class="fab fa-facebook-f" href="https://www.facebook.com/nicgdes/"></a>
+			<a class="fab fa-instagram" href="https://www.instagram.com/nicgdes/"></a>
+			<a class="fab fa-twitter" href="https://twitter.com/nicgdes"></a>
+		</ul>
+		 </div>
+	</div>
+
+
+	<div class="section_subscribe">
+		   <h5>Subscribe to our Newsletter</h5>
+
+				<!-- Begin Mailchimp Signup Form -->
+
+				<div id="mc_embed_signup">
+				<form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<!-- <div id="mc_embed_signup_scroll">
+					<label for="mce-EMAIL">Subscribe</label> -->
+					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div>
+					<div class="clear">
+						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button--hoverinverseskew button__nocolor button__nocolor--blue"></div>
+					</div>
+	</div>
+				</form>
+
+
+
+	<div>
+		<p>Copyright &copy; 2019 North Idaho College Graphic Design Students</p>
+	</div>
 
 <!-- FOOTER ENDS -->
 
